# 3Draper

./: .clippy.toml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  ROADMAP.md  draper-viewer.js  index.html
.github/workflows/: deploy.yml
3draper-src/3Draper-main/: Cargo.toml
3draper-src/3Draper-main/crates/draper-ffi/: Cargo.toml
3draper-src/3Draper-main/crates/draper-geometry/src/: surface.rs  transform.rs
3draper-src/3Draper-main/crates/draper-mesh/src/: triangulate.rs
3draper-src/3Draper-main/crates/draper-step/: Cargo.toml
3draper-src/3Draper-main/crates/draper-step/src/: converter.rs  exporter.rs  lib.rs  parser.rs
3draper-src/3Draper-main/crates/draper-topology/src/: builder.rs  entity.rs  traversal.rs
3draper-src/3Draper-main/crates/draper-viewer/: Cargo.toml
3draper-src/3Draper-main/crates/draper-viewer/src/: app.rs  camera.rs  lib.rs  main.rs  renderer.rs
bindings/csharp/: Draper.cs
bindings/js/: draper.js
bindings/python/: draper.py
crates/draper-ai/: Cargo.toml
crates/draper-ai/src/: classifier.rs  lib.rs  predictive.rs  strategy.rs
crates/draper-cloud/: Cargo.toml
crates/draper-cloud/src/: collab.rs  incremental.rs  lib.rs  server.rs  stream.rs
crates/draper-core/: Cargo.toml
crates/draper-core/examples/: engine_demo.rs  engine_export.rs  test_mesh.rs  test_step.rs
crates/draper-core/src/: assembly.rs  boolean.rs  document.rs  engine.rs  error.rs  lib.rs  operations.rs  scene.rs  step_bridge.rs
crates/draper-ffi/: Cargo.toml  build.rs
crates/draper-ffi/src/: lib.rs
crates/draper-geometry/: Cargo.toml
crates/draper-geometry/src/: curve.rs  curve2d.rs  direction.rs  intersection.rs  lib.rs  pcurve.rs  point.rs  surface.rs  surface_info.rs  tolerance.rs  transform.rs  vector.rs
crates/draper-mesh/: Cargo.toml
crates/draper-mesh/src/: adaptive.rs  boolean.rs  certification.rs  delaunay.rs  earcut.rs  edge_cache.rs  export.rs  generate.rs  lib.rs  manifold.rs  mesh.rs  parametric_domain.rs  pipeline.rs  quality.rs  stl.rs  triangulate.rs
crates/draper-mesh/tests/: triangulation_test.rs
crates/draper-step/: Cargo.toml
crates/draper-step/src/: ast.rs  bridge.rs  converter.rs  error.rs  exporter.rs  lib.rs  parser.rs  pmi.rs  schema.rs  validation.rs
crates/draper-step/tests/: industrial_files_test.rs  integration_test.rs  nist_test_suite.rs
crates/draper-testing/: Cargo.toml
crates/draper-testing/src/: area.rs  cad_compat.rs  combinations.rs  euler.rs  fuzzing.rs  industrial.rs  lib.rs  nist.rs  normals.rs  primitives.rs  problematic.rs  validity.rs  volume.rs  watertight.rs
crates/draper-topology/: Cargo.toml
crates/draper-topology/src/: boolean.rs  builder.rs  discretize.rs  entity.rs  healing.rs  lib.rs  operations.rs  queries.rs  shape.rs  traversal.rs  validation.rs
crates/draper-viewer/: Cargo.toml  index.html
crates/draper-viewer/src/: app.rs  camera.rs  lib.rs  main.rs  render.rs  renderer.rs  structure_tree.rs
docs/: API.md
examples/: test_step.rs
include/: draper.h
test/: 3.05.078.stp  SampleCube.step  Zentralstaender.stp  Zentralstaender_merged.stl  brick_thin.stp  brick_thin_hole.stp  brick_thin_round.stp  compressor-13920_top.stp  nist_assembly.stp  nist_block_with_hole.stp  nist_chamfer_block.stp  nist_complex_surface.stp  nist_cone.stp  nist_cube.stp  nist_cylinder.stp  nist_sphere.stp  transmission_top.stp
tools/: Cargo.toml
tools/src/: main.rs
