[workspace]
resolver = "2"
members = [
    "crates/draper-step",
    "crates/draper-geometry",
    "crates/draper-topology",
    "crates/draper-mesh",
    "crates/draper-core",
    "crates/draper-ffi",
    "crates/draper-viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KernelDev/3Draper"
description = "3Draper — cross-platform 3D kernel with STEP support and C FFI"

[workspace.dependencies]
# Math
glam = { version = "0.29", features = ["serde"] }

# Triangulation (external — allowed, forked for custom modifications)
spade = "2"

# STEP parsing
nom = "7.1"
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FFI
cbindgen = "0.27"

# Viewer
eframe = "0.30"
egui = "0.30"
egui_extras = "0.30"
wgpu = "23"
rfd = "0.15"

# Internal crates
draper-step = { path = "crates/draper-step" }
draper-geometry = { path = "crates/draper-geometry" }
draper-topology = { path = "crates/draper-topology" }
draper-mesh = { path = "crates/draper-mesh" }
draper-core = { path = "crates/draper-core" }
draper-ffi = { path = "crates/draper-ffi" }

# Patch spade to use our local fork for custom modifications
# This allows us to add features like:
# - Better constrained Delaunay with hole support
# - Steiner point insertion for mesh quality
# - Adaptive refinement based on surface curvature
# - Faster CDT for large meshes
[patch.crates-io]
spade = { path = "vendor/spade" }
