[package]
name = "draper-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
draper-core = { workspace = true }
log = { workspace = true }
