[package]
name = "draper-core"
version.workspace = true
edition.workspace = true

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
draper-step = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
