[package]
name = "draper-ffi"
version.workspace = true
edition.workspace = true

[lib]
# cdylib and staticlib are only useful on native targets.
# On wasm, this crate compiles to an empty lib (all code is cfg-gated out).
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
draper-core = { workspace = true }
draper-step = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
