[package]
name = "draper-mesh"
version.workspace = true
edition.workspace = true

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
spade = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = "1.10"
zip = "2"

[dev-dependencies]
tempfile = "3"
