[package]
name = "draper-step"
version.workspace = true
edition.workspace = true

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
