[package]
name = "draper-testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
draper-step = { workspace = true }
draper-core = { workspace = true }
