[package]
name = "draper-viewer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "draper-viewer"
path = "src/main.rs"

[features]
default = ["native"]
native = ["rfd", "env_logger"]
web = ["web-sys", "wasm-bindgen", "console_log", "wasm-bindgen-futures", "js-sys", "web-time"]

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
draper-core = { workspace = true }
draper-step = { workspace = true }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = { workspace = true }
egui-wgpu = { version = "0.31" }
wgpu = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
log = { workspace = true }

# Native-only dependencies
rfd = { version = "0.15", optional = true }
env_logger = { version = "0.11", optional = true }

# Web-only dependencies
web-sys = { version = "0.3", optional = true, features = [
    "HtmlInputElement",
    "HtmlElement",
    "HtmlCanvasElement",
    "File",
    "FileReader",
    "FileList",
    "Event",
    "EventTarget",
    "Blob",
    "Document",
    "Window",
    "Element",
    "Performance",
] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_log = { version = "1", optional = true }
js-sys = { version = "0.3", optional = true }
web-time = { version = "1", optional = true }
