[package]
name = "draper-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
draper-geometry = { workspace = true }
draper-topology = { workspace = true }
draper-mesh = { workspace = true }
draper-core = { workspace = true }
draper-step = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
